# mcp-ontology-annotator

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: example_usage.py
src/ontology_annotator/: __init__.py  annotator.py  bioportal_client.py  config.py  extractor.py  ols_client.py  server.py
tests/: test_annotator.py
